# Educate

./: .gitignore  Cargo.toml  README.md
searchinterface/: package-lock.json  package.json
searchinterface/src/: App.jsx  AuthProvider.jsx  SearchCache.jsx  autocompletion.jsx  config_utilities.jsx  index.css  main.jsx
searchinterface/src/components/: Auth.jsx  AutoSuggestion.jsx  Config.jsx  SearchBar.jsx  SearchHistory.jsx  SearchResult.jsx  Summary.jsx
searchinterface/src/pages/: authpage.jsx  history.jsx  home.jsx  index.jsx  settings.jsx
searchinterface/src/styles/: page.module.css
searchinterface/src/styles/component-styles/: SearchBar.module.css  SearchHistory.module.css  SearchResult.module.css  Summary.module.css
src/: api.rs  auth.rs  config.rs  crawl.rs  discover.rs  index.rs  main.rs  meta.rs  parser.rs  rank.rs  services.rs  test.rs
src/microservices/: search.py
src/scripts/: cluster.py  embedding.py  requirements.txt  sentence_transform.py
